--- a/src/aura/DynamicFieldRow/DynamicFieldRow.cmp
+++ b/src/aura/DynamicFieldRow/DynamicFieldRow.cmp
@@ -100,7 +100,7 @@
                                         <aura:set attribute="else">
                                             <aura:if isTrue="{!v.fieldDataType == 'Reference'}">
                                                 <div class="">
-                                                    <aura:if isTrue="{!not(or(empty(v.userWrapperList),(empty(v.dandBCompanyWrapperList)) ))}">
+                                                    <aura:if isTrue="{!not(and(empty(v.userWrapperList),(empty(v.dandBCompanyWrapperList)) ))}">
                                                         <c:LookupFieldComponent aura:id="LookupFieldComponent" recordType="{#v.recordType}" isDisabled="{!v.isViewMode}" 
                                                                                           userWrapperList="{!v.userWrapperList}"
 																						  dandBCompanyWrapperList="{!v.dandBCompanyWrapperList}"
