--- a/src/aura/ActionTemplateList/ActionTemplateList.cmp
+++ b/src/aura/ActionTemplateList/ActionTemplateList.cmp
@@ -9,6 +9,12 @@
     <aura:attribute name="sortedBy" type="String" default="Name"/>
     <aura:attribute name="sortedDirection" type="String" default="asc"/>
     <aura:attribute name="spinner" type="boolean" default="false"/>
+    <aura:attribute name="isModal" type="boolean" default="false"/>
+    <!--Action Model attribute -->
+    <aura:attribute name="actionType" type="string" default="Action Type"/>
+    <aura:attribute name="actionName" type="string" default="Action Name"/>
+    <aura:attribute name="actionDesc" type="string" default="Action Description"/>
+    
     <!--Action Objects -->
     <aura:attribute name="newAction" type="Action" default="{ 'sobjectType': 'Action'}"/>
     
@@ -35,5 +41,10 @@
     <div class="rdna-bottom-padding">
         <c:Pagination total="{!v.totalNumberOfRows}" pageOffset="{!v.rowsToLoad}"/>
     </div>
-    
+    <aura:if isTrue="{!v.isModal}">
+        <div class = "slds-form-element__row slds-size_1-of-1">
+            <c:ActionModal aura:id="actionModal" isModal="{!v.isModal}" actionType="{!v.actionType}"
+                           actionName="{!v.actionName}" actionDesc="{!v.actionDesc}"/>
+        </div>
+    </aura:if>
 </aura:component>
