--- a/src/aura/ActionBuilder/ActionBuilder.cmp
+++ b/src/aura/ActionBuilder/ActionBuilder.cmp
@@ -46,89 +46,34 @@
                 <h1 class="slds-page-header__title slds-m-right_small slds-align-middle slds-truncate rdna-header-large"  title="New Action">{!v.recordName}</h1>
                 <!-- / HEADING AREA -->
             </div>
-            <div>
+            <aura:if isTrue = "{!v.currentStep == '2' || v.currentStep == 2}" >
+            <div class="rdna-back-button">
                 <a href="javascript:void(0)" onclick="{!c.clickBack}" class="rdna-button-text slds-text-align_center slds-m-top_large slds-p-left_large slds-p-right_large">back</a>               
-            </div>    
+             </div> 
+            </aura:if>   
             <div>
-                <lightning:button class="rdna-button rdna-button-text slds-text-align_center slds-m-top_large slds-p-left_large slds-p-right_large" aura:id="cancel" label="Cancel" onclick="{!c.onCancel}"/>
+                <lightning:button class="rdna-button rdna-button-text slds-text-align_center slds-m-top_large  slds-m-right_medium slds-p-left_large slds-p-right_large" aura:id="cancel" label="Cancel" onclick="{!c.onCancel}"/>
             </div>
+            <aura:if isTrue = "{!v.currentStep == '2' || v.currentStep == 2}" >
             <div>
                 <lightning:button class="rdna-button rdna-button-text slds-text-align_center slds-m-top_large slds-p-left_large slds-p-right_large" aura:id="deleteActions" label="Save" onclick="{!c.createAction}"/>
             </div>
+            </aura:if>    
         </div>
         
         <!-- Body Start -->
-        <div class="slds-box_xx-small">
-            <fieldset class="slds-form-element slds-form_compound">
-                <!-- CREATE NEW ACTION FORM -->
-                <aura:if isTrue = "{!v.currentStep == '1' || v.currentStep == 1}" >
-                    <form class="slds slds-form slds-m-left_large">
-                        
-                        <p class="slds-page-header__row slds-m-top_large slds-truncate slds-align_absolute-center rdna-sub-header-bold" >Action Details</p>
-                        <p class="slds-align_absolute-center slds-m-bottom_large rdna-sub-header" style="padding-top:15px;">Enter the details of your new action which can be added to any sequence list.</p>
-                        
-                        <div class="slds-form-element__row slds-p-top_small slds-align_absolute-center">
-                            <div class="slds-form-element__control slds-size_1-of-4 ">
-                                <lightning:input aura:id="formValidationId" label="Name"
-                                                 name="actionname"
-                                                 value="{!v.newAction.name}"
-                                                 placeholder = "Enter Action Name"
-                                                 messageWhenBadInput = "Please Enter Name"
-                                                 required="true"/> 
-                            </div>                                                
-                        </div>                    
-                        <span class="rdna-template-bold slds-p-top_medium slds-page-header__row slds-text-title_bold slds-truncate slds-align_absolute-center">Action Types</span>
-                        <span class="rdna-styling slds-align_absolute-center">Choose the type of action you want to build.</span>
-                        <div class="slds-form-element__row slds-p-top_small">
-                            
-                            <div class="rdna-div slds-align_absolute-center" required="true" messageWhenValueMissing="Please Select Action Type." disabled = "{!v.disableActionType}">
-                                <a onclick="{!c.createCallAction}" disabled = "{!v.disableActionType}">              
-                                    <aura:if isTrue="{!v.newAction.type == 'Call'}">
-                                        <img class = "actions-icon" src="{!$Resource.cadence_icons + '/action-icons/select/call.png'}"/> 
-                                        <aura:set attribute="else">
-                                            <img class = "actions-icon" src="{!$Resource.cadence_icons + '/action-icons/default/call.png'}"/>
-                                        </aura:set>
-                                    </aura:if>
-                                </a>
-                                <a onclick="{!c.createEmailAction}" disabled = "{!v.disableActionType}">
-                                    <aura:if isTrue="{!v.newAction.type == 'Email'}">
-                                        <img class = "actions-icon rdna-icon" src="{!$Resource.cadence_icons + '/action-icons/select/email.png'}"/> 
-                                        <aura:set attribute="else">
-                                            <img class = "actions-icon rdna-icon" src="{!$Resource.cadence_icons + '/action-icons/default/email.png'}"/>
-                                        </aura:set>
-                                    </aura:if>
-                                </a>                             
-                                <a onclick="{!c.createSMSAction}" disabled = "{!v.disableActionType}">
-                                    <aura:if isTrue="{!v.newAction.type == 'SMS'}">
-                                        <img class = "actions-icon rdna-icon" src="{!$Resource.cadence_icons + '/action-icons/select/sms.png'}"/> 
-                                        <aura:set attribute="else">
-                                            <img class = "actions-icon rdna-icon" src="{!$Resource.cadence_icons + '/action-icons/default/sms.png'}"/>
-                                        </aura:set>
-                                    </aura:if>
-                                </a>                               
-                                <a onclick="{!c.createTaskAction}" disabled = "{!v.disableActionType}">
-                                    <aura:if isTrue="{!v.newAction.type == 'Task'}">
-                                        <img class = "actions-icon rdna-icon" src="{!$Resource.cadence_icons + '/action-icons/select/task.png'}"/> 
-                                        <aura:set attribute="else">
-                                            <img class = "actions-icon rdna-icon" src="{!$Resource.cadence_icons + '/action-icons/default/task.png'}"/>
-                                        </aura:set>
-                                    </aura:if>
-                                </a>                                                      
-                            </div>                    
-                        </div>
-                    </form>
-                </aura:if>
-                <aura:if isTrue = "{!v.currentStep == '2' || v.currentStep == 2}" >
-                    <div>
-                        <p class="slds-page-header__row slds-m-top_large slds-truncate slds-align_absolute-center rdna-sub-header-bold" >SMS Templates</p>
-                        <p class="slds-align_absolute-center  rdna-sub-header" style="padding-top:15px;">Create pre-configured SMS Templates.</p>
-                        <p class="slds-align_absolute-center slds-m-bottom_large rdna-sub-header-small" style="padding-top:5px;">There are currently no pre-configured SMS Templates associated to this account. (Optional) </p>
-                        <c:ActionTemplateList newAction="{!v.newAction}" spinner="{!v.spinner}"
-                                              rowActionTemplateList="{!v.rowActionTemplateList}"/>
-                    </div>
-                </aura:if>
-            </fieldset>
-        </div>
+       <!-- CREATE NEW ACTION FORM -->
+        <aura:if isTrue = "{!v.currentStep == '1' || v.currentStep == 1}" >          
+            <c:ActionDetails aura:id="newActionDetail" newAction = "{!v.newAction}" disableActionType = "{!v.disableActionType}" currentStep ="{!v.currentStep}"/>       
+        </aura:if>
+        <aura:if isTrue = "{!v.currentStep == '2' || v.currentStep == 2}" >
+            <div>
+                <p class="slds-page-header__row slds-m-top_large slds-truncate slds-align_absolute-center rdna-sub-header-bold" >SMS Templates</p>
+                <p class="slds-align_absolute-center  rdna-sub-header" style="padding-top:15px;">Create pre-configured SMS Templates.</p>
+                <p class="slds-align_absolute-center slds-m-bottom_large rdna-sub-header-small" style="padding-top:5px;">There are currently no pre-configured SMS Templates associated to this account. (Optional) </p>
+                <c:ActionTemplateList newAction="{!v.newAction}" spinner="{!v.spinner}"
+                                      rowActionTemplateList="{!v.rowActionTemplateList}"/>
+            </div>
+        </aura:if>        
     </div>
-    
 </aura:component>
