--- a/src/aura/ActionBuilder/ActionBuilder.css
+++ b/src/aura/ActionBuilder/ActionBuilder.css
@@ -205,6 +205,9 @@
 .THIS .rdna-icon{
     margin-left: 36px;
 }
+.THIS .rdna-back-button{
+    margin-top: 30px;
+}
 /*.THIS .slds-dropdown-trigger.slds-is-open .slds-listbox__option.slds-has-focus {
 background-color: blue;
 }
