--- a/src/aura/ActionBuilder/ActionBuilder.css
+++ b/src/aura/ActionBuilder/ActionBuilder.css
@@ -97,6 +97,13 @@
 /*-----table css---------------------------------*/
 
 /*Button*/
+.THIS .rdna-button-save{
+    width: 93.7px;
+    height: 30px;
+    border-radius: 6px;
+    background-color: #ffffff !important;
+    border: solid 1px #0066ff !important;    
+}
 .THIS .rdna-button{
     width: 93.8px;
     height: 30px;
@@ -119,7 +126,17 @@
     text-align: center;
     color: #979797;
 }
-
+.THIS .rdna-button-text-save{
+    font-family: Logical;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: center;
+    color: #0066ff;
+}
 /*Updated all input box(Default class is updated)*/
 .THIS .slds-input {
     width: 300px !important;
